[package]
name = "media-scanner"
version = "0.1.0"
edition = "2021"
authors = ["Christoph Taucher <taucher.ch@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.3.1"
clap = { version = "3.1.1", features = ["derive"]}